# BezierCurveAndPatch

./: Bezier.sln  CMakeLists.txt  LICENSE  README.md
Bezier/: Bezier.vcxproj  Bezier.vcxproj.filters  BezierCurveHandler.cpp  BezierCurveHandler.h  BezierCurveMesh.cpp  BezierCurveMesh.h  BezierCurveObject.cpp  BezierCurveObject.h  BezierPatchHandler.cpp  BezierPatchHandler.h  BezierPatchMesh.cpp  BezierPatchMesh.h  BezierPatchObject.cpp  BezierPatchObject.h  BezierSurfaceCompute.glsl  BezierSurfaceTexture.cpp  BezierSurfaceTexture.h  Camera.cpp  Camera.h  ComputeGenerativeCurve.glsl  Handler.cpp  Handler.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OpenGLWidget.cpp  OpenGLWidget.h  OpenGLWidget.ui  PlaneMesh.cpp  ShaderProgram.cpp  ShaderProgram.h  bezierCurveFragment.glsl  bezierCurveVertex.glsl  bezierSurfaceVertex.glsl  fragment.glsl  fragmentControlPoly.glsl  main.cpp  normalCompute.glsl  vertexBezierCurve.glsl  vertexBezierSurface.glsl  (+1 more)
Bezier/Mesh/: Mesh.cpp  Mesh.h  MeshHalfEdge.cpp  MeshHalfEdge.h  MeshTriangle.cpp  MeshTriangle.h  MeshVertex.cpp  MeshVertex.h
src/: Camera.cpp  Camera.h  ComputeShader.h  Handler.cpp  Handler.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OpenGLWidget.cpp  OpenGLWidget.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp
src/BezierCurve/: BezierCurveHandler.cpp  BezierCurveHandler.h  BezierCurveMesh.cpp  BezierCurveMesh.h  BezierCurveObject.cpp  BezierCurveObject.h
src/BezierPatch/: BezierPatchHandler.cpp  BezierPatchHandler.h  BezierPatchMesh.cpp  BezierPatchMesh.h  BezierPatchObject.cpp  BezierPatchObject.h  BezierSurfaceTexture.cpp  BezierSurfaceTexture.h
src/Mesh/: Mesh.cpp  Mesh.h  MeshHalfEdge.cpp  MeshHalfEdge.h  MeshTriangle.cpp  MeshTriangle.h  MeshVertex.cpp  MeshVertex.h
src/Shaders/: BezierSurfaceCompute.glsl  fragmentBezierSurface.glsl  normalCompute.glsl  vertexBezierCurve.glsl  vertexControlPoly.glsl
